feat: add spark configuration